<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SBPMap</string>
    <string name="action_settings">Settings</string>
    <string name="clean">Clean</string>
    <string name="test">Test</string>
    <string name="help">Help</string>
    <string name="title_activity_title_bar">TitleBar</string>
    <string name="search_near">Search near</string>
    <string name="ok">Ok</string>

    <string name="select_categories">Select categories</string>

    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="hours">Opening hours:</string>
    <string name="bill">Bill:</string>
    <string name="price_by_night">Price by night:</string>
    <string name="definition">Definition:</string>
    <string name="price_include">Price includes:</string>

    <string name="restaurant">Restaurants</string>
    <string name="hotel">Hotels</string>
    <string name="landmark">Landmarks</string>
    <string name="places">Places</string>
    <string name="hostel">Hostels</string>
    <string name="minihotel">Mini-hotels</string>
    <string name="bridge">Brdiges</string>
    <string name="park">Parks</string>
    <string name="monument">Monuments</string>
    <string name="about">About</string>

    <string name="dummy_button">To Site</string>
    <string name="dummy_content">Print text here</string>
    <string name="str_depth">Applied Math Department</string>
    <string name="str_university">St.Petersburg State Polytechnical University</string>
    <string name="str_toweb">To site</string>


    <string name="has_fitness">Fitness</string>
    <string name="has_meal">Evenin meal</string>
    <string name="has_internet">Internet</string>
    <string name="has_airport_transfer">Transfer to airport</string>
    <string name="has_breakfast">Breakfast</string>
    <string name="has_spa">Spa</string>
    <string name="has_parking">Parking</string>
    <string name="has_pool">Pool</string>
    <string name="has_bathroom">Bathroom</string>

    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error!</string>
    <string name="titleSelectCategory">"Select categories"</string>


    <string name="google_maps_key">AIzaSyAgoJlD7f1Id2t8cP9NueHgD6RbRmmvL-w</string>
    <string name="alert_image_content_description">Alert Image</string>

</resources>
