<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Name Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/name" />

        <!--  Name Value -->
        <TextView
            android:id="@+id/hotel_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- Address Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/address" />

        <!--  Adress Value -->
        <TextView
            android:id="@+id/hotel_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- Cost Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/price_by_night" />

        <!--  Cost Value -->
        <TextView
            android:id="@+id/hotel_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- Definition Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/definition" />

        <!--  Definition Value -->
        <TextView
            android:id="@+id/hotel_definition"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- Price include Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/price_include" />

        <!--  Price include Value -->
        <TextView
            android:id="@+id/price_include"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
    </LinearLayout>

</ScrollView>