<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical">
        <!-- Name Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/name" />

        <!--  Name Value -->
        <TextView
            android:id="@+id/landmark_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- stub string -->

        <!-- Address Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/address" />

        <!--  Adress Value -->
        <TextView
            android:id="@+id/landmark_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />

        <!-- Definition Label -->
        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/textview_height"
            android:text="@string/definition" />

        <!--  Definition Value -->
        <TextView
            android:id="@+id/landmark_definition"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
    </LinearLayout>

</ScrollView>